springBoot.yml
# Node Port Service For SpringApp
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: springboot
