springboot-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ak-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: my-angular-app
        image: nipuntlankaiit/springboot:0.4
        ports:
        - containerPort: 8085
# service type loadbalancer
---
apiVersion: v1
kind: Service
metadata:
  name: angular-app-svc
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
      nodePort: 30010
  type: NodePort
